[tool.poetry]
name = "MazeTime"
version = "0.1.0"
description = ""
authors = ["2laJ2 <tuulajakobsson@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"