[tool.poetry]
name = "MazeTime"
version = "0.1.0"
description = ""
authors = ["2laJ2 <tuulajakobsson@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.1"
pylint = "^2.12.2"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"